Ready for release that does not work.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 requires = ["setuptools>=46.1", "wheel>=0.34"]
 
 [tox]
-envlist = 'py37,py38,py39'
+envlist = 'py37,py38'
 
 [testenv]
 #wheel = true
