--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
+
+[build-system]
+requires = ["setuptools>=46.1", "wheel>=0.34"]
+
+[tox]
+envlist = 'py37,py38'
+
+[testenv]
+skipdist=True
+deps = ["pytest", "hypothesis", "wheel"]
+commands = ["pytest", "python setup.py sdist bdist_wheel"]
+
 [tool.poetry]
 name = "tyrannosaurus"
 version = "0.0.1"
