--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [build-system]
 requires = ["setuptools>=46.1", "wheel>=0.34"]
 
@@ -6,6 +5,7 @@ requires = ["setuptools>=46.1", "wheel>=0.34"]
 envlist = 'py37,py38'
 
 [testenv]
+whitelist_externals = poetry
 skipdist = true
 deps = ["pytest", "hypothesis", "wheel"]
 commands = ["pytest", "python setup.py sdist bdist_wheel"]
@@ -28,3 +28,6 @@ max-line-length = 120
 [tool.black]
 line-length = 120
 target-version = ['py37', 'py38']
+
+[tool.isort]
+line_length = 120
