--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,6 @@ root = true
 charset = utf-8
 trim_trailing_whitespace = true
 end_of_line = lf
-indent_style = tab
-indent_size = 1
+indent_style = space
+indent_size = 4
 insert_final_newline = true
