--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
   - "3.7"
   - "3.8"
+
 install:
-  - pip install .[all]
+  - pip install poetry tox tox-travis
+
 script:
-  - pytest
+  - tox
