Deleted code and requirements.

--- a/tox.ini
+++ b/tox.ini
@@ -18,18 +18,11 @@ commands = poetry install -v
 
 [testenv:format]
 deps =
-    isort
-    black
+    isort >= 4.3,<5.0
+    black == 9.10b0
 commands =
     isort --recursive tyrannosaurus tests docs
     black tyrannosaurus tests docs
-
-[testenv:build]
-commands =
-    poetry build
-
-[coverage:run]
-source = tyrannosaurus
 
 [flake8]
 max-line-length = 100
@@ -38,3 +31,5 @@ exclude =  .git
            __pycache__/
            build/
            dist/
+import-order-style = google
+docstring-convention = google
