--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,16 @@
-
 [metadata]
 description-file = "README.md"
 
 [build-system]
 requires = ["poetry>=1.0", "coverage[toml]"]
 build-backend = "poetry.masonry.api"
+
+[tool.tyrannosaurus.targets]
+tox    = true
+docs   = true
+recipe = true
+flake8 = false
+hooks  = false
 
 
 #########################################################################################
@@ -13,7 +19,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.0.4"
+version = "0.0.2"
 description = "Generate ready-to-go Python projects."
 include = ["README.md", "LICENSE.txt", "CHANGES.md"]
 authors = ["Douglas Myers-Turnbull"]
@@ -51,11 +57,12 @@ source = "https://github.com/dmyersturnbull/tyrannosaurus"
 #########################################################################################
 
 [tool.poetry.scripts]
-run = "tyrannosaurus.main:main"
+tyrannosaurus = "tyrannosaurus.cli:cli"
 
 [tool.poetry.dependencies]
 python        = "^3.7"
 click         = "^7.1"
+toml          = "^0.10"
 docker = {optional = true, version = "^4.2"}
 
 [tool.poetry.extras]
@@ -64,14 +71,16 @@ all     = ["docker"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
-coverage = "^5.1"
 pylint = "^2.5"
 flake8 = "^3.7"
 isort = "^4.3"
 mypy = "^0.750.0"
+autoapi = "^2.0"
 pre-commit = "^2.3"
 black = "=19.10b0"
-poetry2conda = "^0.1.0"
+#poetry2conda = "^0.1.0"
+importlib-metadata = "^1.6"
+coverage = {extras = ["toml"], version = "^5.1"}
 
 
 #########################################################################################
@@ -94,6 +103,15 @@ name = "tyrannosaurus"
 #########################################################################################
 # Style checking
 #########################################################################################
+
+[tool.coverage.paths]
+source = ["tyrannosaurus"]
+
+[tool.coverage.run]
+source = ["tyrannosaurus"]
+
+[tool.coverage.report]
+show_missing = true
 
 [mypy]
 check_untyped_defs = true
