--- a/tox.ini
+++ b/tox.ini
@@ -1,31 +1,30 @@
-
 [tox]
 minversion = 3.14
-requires = pytest   >= 5.4
-           flake8   >= 3.7
-           coverage >= 5.1
-           mypy     >= 0.750
+extras = dev
 isolated_build = True
 envlist = py37
 
 [testenv]
 whitelist_externals = poetry
 skipdist = True
-commands = poetry install -v
-           poetry run pytest tests/
-           poetry run coverage report -m
-           flake8 tyrannosaurus tests docs
-
-[testenv:format]
-deps =
-    isort >= 4.3,<5.0
-    black == 9.10b0
 commands =
-    isort --recursive tyrannosaurus tests docs
-    black tyrannosaurus tests docs
+    poetry check
+    poetry lock
+    poetry run isort --recursive tyrannosaurus tests docs
+    poetry run black tyrannosaurus tests docs
+    poetry build
+    poetry install -v
+    poetry run pytest --cov
+    poetry run flake8 tyrannosaurus
+    poetry run flake8 docs
+    poetry run flake8 --ignore=D100,D101,D102,D103,D104 tests
+    sphinx-build -b html docs docs/html
+#tyrannosaurus clean
+#tyrannosaurus sync
 
 [flake8]
 max-line-length = 100
+ignore = D212,D205,D410,D411,D200
 doctests = true
 exclude =  .git
            __pycache__/
