--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Thumbs.db
 tmp/
 
 # Python
+docs/html/
 __pycache__/
 __pypackages__/
 *.py[cod]
@@ -42,12 +43,9 @@ deps/deps.jl
 !/.gitignore
 !/.travis.yml
 !/.circleci/config.yml
-!/.coveragerc
 !/.appveyor.yml
 !/.flake8
 !/.readthedocs.yml
-!/.coverage
 !/.dockerignore
 !/.editorconfig
-!/.tyrannosaurus
 !/.pre-commit-config.yaml
