--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     hooks:
       - id: isort
         additional_dependencies: [toml]
-        exclude: ^.*/?setup\.py$
+        exclude: ^.*/?(?:docs)|(?:setup\.py)$
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
