Fixed sphinx build.

--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,9 @@ commands =
     poetry build
     poetry install -v
     poetry run pytest --cov
-    poetry run flake8 tyrannosaurus
-    poetry run flake8 docs
-    poetry run flake8 --ignore=D100,D101,D102,D103,D104 tests
+    - poetry run flake8 tyrannosaurus
+    - poetry run flake8 docs
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104 tests
     sphinx-build -b html docs docs/html
 #tyrannosaurus clean
 #tyrannosaurus sync
