--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,8 @@ python                   = "^3.7"
 click                    = "^7.1"
 toml                     = "^0.10"
 importlib-metadata       = "^1.6"
+sphinx-autoapi           = "^1.3"
+sphinx-rtd-theme         = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit               = "^2.3"
@@ -88,16 +90,13 @@ pytest                   = "^5.4"
 coverage                 = {extras = ["toml"], version = "^5.1"}
 pytest-cov               = "^2.8"
 sphinx                   = "^3.0"
-sphinx-autodoc-typehints = "^1.10"
-autoapi                  = "^2.0"
+sphinx-autoapi           = "^1.3"
 mypy                     = "^0.750"
 pytype                   = {version = "^2020.1.8", python = "3.7"}
 flake8                   = "^3.7"
 flake8-docstrings        = "^1.5"
 black                    = "=19.10b0"
 isort                    = "^4.3"
-#poetry2conda            = "^0.1.0"
-#pylint                  = "^2.5"
 docker                   = {optional = true, version = "^4.2"}
 
 [tool.poetry.extras]
@@ -123,9 +122,6 @@ versioning = "semver"
 from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "poetrylock", path = "poetry.lock"}
 
-[tool.poetry2conda]
-# TODO conda-forge
-name = "tyrannosaurus"
 
 #########################################################################################
 # Style checking
