Fixed trove classifiers.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,13 +51,14 @@ classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Natural Language :: English",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: Only",
+    "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
-    "Intended Audience : Developers",
+	"Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Environment :: Console",
+	"Framework :: tox",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Code Generators"
