--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ linelength = "tool.black.line-length"
 
 [tool.tyrannosaurus.targets]
 tox          = true
-hooks        = false
+docs         = true
 license      = false
 contributors = false
 
@@ -36,9 +36,25 @@ contributors = false
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.0.2"
+version = "0.0.3"
 description = "Generate ready-to-go Python projects."
-include = ["README.md", "LICENSE.txt", "CHANGES.md"]
+include = [
+    "README.md",
+    "LICENSE.txt",
+    "CHANGES.md",
+    ".appveyor.yml",
+    ".dockerignore",
+    ".editorconfig",
+    ".gitignore",
+    ".pre-commit-config.yaml",
+    ".travis.yml",
+    "pyproject.toml",
+    "readthedocs.yml",
+    "tox.ini",
+    "docs",
+    "recipes",
+    "tests"
+]
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
 license = "Apache-2.0"
@@ -79,11 +95,9 @@ tyrannosaurus = "tyrannosaurus.cli:cli"
 
 [tool.poetry.dependencies]
 python                   = "^3.7"
-click                    = "^7.1"
-toml                     = "^0.10"
+tomlkit                  = "^0.6.0"
 importlib-metadata       = "^1.6"
-sphinx-autoapi           = "^1.3"
-sphinx-rtd-theme         = "^0.4.3"
+typer                    = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit               = "^2.3"
@@ -92,6 +106,7 @@ coverage                 = {extras = ["toml"], version = "^5.1"}
 pytest-cov               = "^2.8"
 sphinx                   = "^3.0"
 sphinx-autoapi           = "^1.3"
+sphinx-rtd-theme         = "^0.4.3"
 mypy                     = "^0.750"
 pytype                   = {version = "^2020.1.8", python = "3.7"}
 flake8                   = "^3.7"
@@ -101,6 +116,7 @@ isort                    = "^4.3"
 docker                   = {optional = true, version = "^4.2"}
 
 [tool.poetry.extras]
+docs    = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi", "importlib_metadata"]
 dev     = [
         "pre-commit", "pytest", "coverage",
         "sphinx", "sphinx-autodoc-typehits", "autoapi",
@@ -137,13 +153,15 @@ source = ["tyrannosaurus"]
 [tool.coverage.report]
 show_missing = true
 
-[mypy]
-check_untyped_defs = true
-strict_optional = true
-
 [tool.black]
 line-length = 100
 target-version = ["py36", "py37", "py38"]
+
+[tool.isort]
+line_length = 100
+[mypy]
+check_untyped_defs = true
+strict_optional = true
 
 [pycodestyle]
 max-line-length = 100
@@ -152,6 +170,3 @@ statistics = true
 [pydocstyle]
 # 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
 ignore = ["D203", "D212", "D302"]
-
-[tool.isort]
-line_length = 100
