--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,61 @@
+minimum_pre_commit_version: 2.3.0
+
 repos:
-  - repo: https://github.com/psf/black
-    rev: stable
-    hooks:
-      - id: black
-
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
-    hooks:
-      - id: isort
-        additional_dependencies: [toml]
-        exclude: ^.*/?(?:docs)|(?:setup\.py)$
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-      - id: trailing-whitespace
-        exclude: ^tests/.*/fixtures/.*
-      - id: end-of-file-fixer
-        exclude: ^tests/.*/fixtures/.*
-      - id: debug-statements
+    -
+        repo: meta
+        hooks:
+            - id: check-hooks-apply
+            - id: check-useless-excludes
+    -
+        repo: 'https://github.com/psf/black'
+        rev: stable
+        hooks:
+            -
+                id: black
+    -
+        repo: 'https://github.com/pre-commit/mirrors-isort'
+        rev: v4.3.21
+        hooks:
+            -
+                id: isort
+                additional_dependencies:
+                    - toml
+    -
+        repo: 'https://github.com/pre-commit/pre-commit-hooks'
+        rev: v2.5.0
+        hooks:
+            -
+                id: check-added-large-files
+            -
+                id: trailing-whitespace
+            -
+                id: end-of-file-fixer
+            -
+                id: debug-statements
+            -
+                id: check-builtin-literals
+            -
+                id: check-toml
+                name: Check Toml
+                description: Toml file syntax errors
+                entry: check-toml
+                language: python
+                types:
+                    - toml
+            -
+                id: check-yaml
+                name: Check Yaml
+                description: Yaml file syntax errors
+                entry: check-yaml
+                language: python
+                types:
+                    - yaml
+                exclude: ^recipes/.*
+            -
+                id: check-json
+                name: Check JSON
+                description: JSON file syntax errors
+                entry: check-json
+                language: python
+                types:
+                    - json
