--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,4 +27,4 @@ jobs:
             -
                 name: Publish on PyPi
                 run: |
-                    poetry publish -build -vv --username __token__ --password ${{ secrets.PYPI_TOKEN }}
+                    poetry publish --build -vv --username __token__ --password ${{ secrets.PYPI_TOKEN }}
