--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
     poetry run pytest --cov
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
-    - poetry run flake8 --ignore=D100,D101,D102,D103,D104 tests
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
     sphinx-build -b html docs docs/html
 #tyrannosaurus clean
 #tyrannosaurus sync
