--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,13 @@
 minversion = 3.14
 extras = dev
 isolated_build = True
-envlist = py37
+envlist = py38
 
 [testenv]
 whitelist_externals = poetry
 skipdist = True
 commands =
+    tyrannosaurus sync
     poetry check
     poetry lock
     poetry build
@@ -17,8 +18,7 @@ commands =
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
     sphinx-build -b html docs docs/html
-#tyrannosaurus clean
-#tyrannosaurus sync
+    tyrannosaurus clean
 
 [flake8]
 max-line-length = 100
