--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
             max-parallel: 1
             matrix:
                 python-version:
-                    - 3.7
+                    - 3.8
         steps:
             -
                 name: Checkout
@@ -27,11 +27,11 @@ jobs:
                 name: Install build dependencies
                 run: |
                     python -m pip install --upgrade pip
-                    pip install poetry tox tox-gh-actions
+                    pip install poetry tox
             -
                 name: Test with tox
                 run: |
-                    tox
+                    tox -v
             -
                 name: Build the Docker image
                 run: |
