--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,20 +17,20 @@ jobs:
                 name: Set up Python
                 uses: actions/setup-python@v2
                 with:
-                    python-version: '3.8'
+                    python-version: 3.8
             -
                 name: Install build dependencies
                 run: |
                     python -m pip install --upgrade pip
-                    pip install poetry tox tox-gh-actions
+                    pip install poetry tox
+            -
+                name: Install with Poetry
+                run: |
+                    poetry install
             -
                 name: Test with tox
                 run: |
                     tox
-            -
-                name: Build with Poetry
-                run: |
-                    poetry build
             -
                 name: Build the Docker image
                 run: |
