--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,9 @@ commands =
 
 [flake8]
 max-line-length = 100
-ignore = D212,D205,D410,D411,D200
+# black contradicts W503
+# the rest just seem overly picky, which obscures real problems
+ignore = W503,E203,E225,E301,E302,E501,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293
 doctests = true
 exclude =  .git
            __pycache__/
